# iro

./: .gitignore  Main.hs  README.md  iro.cabal
src/: Algorithms.hs  ColorMaps.hs  Colors.hs
